# WeatherCLI

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/weathercli/: cli.py
src/weathercli/presentation/: formatter.py
src/weathercli/services/: geocoding.py  weather.py  weather_api.py
src/weathercli/utils/: country_code.py  http.py  weather_code.py
