[project]
name = "weathercli"
version = "0.1.0"
description = "CLI tool to get weather information using Open-Meteo"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click",
    "pycountry",
    "requests",
    "rich"
]

[project.scripts]
weathercli = "weathercli.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]
